--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Merriweather', serif;
+    -moz-box-sizing: border-box;
+}
+
+input,
+a,
+button,
+div{
+    -webkit-tap-highlight-color: transparent;
+}
+
+//Removing background hightlight when autofill on google browser
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+    transition: background-color 600000s 0s, color 600000s 0s;
+}
+
+.my-container{
+    max-width: 1300px;
+    padding: 0 20px;
+}
