--- a/src/app/components/agenda/agenda.component.html
+++ b/src/app/components/agenda/agenda.component.html
@@ -65,9 +65,9 @@
 
                     <div class="event">
                         <div class="left">
-                            <p class="header">Va Voter NUPES ! – Émission spéciale de 17h à 22h</p>
-                            <p class="date">17 juin 2022</p>
-                            <p class="text">Le 17 juin 2022, Jean-Luc Mélenchon était l’invité de l’émission « Questions de confiance » sur BFMTV et RMC. Apolline de Malherbe l’a tout d’abord questionné sur le déplacement d’Emmanuel</p>
+                            <p class="header">Assemblées Générales Électives </p>
+                            <p class="date">10 Novembre 2022, <span>à partir de 10h00</span> </p>
+                            <p class="text">Le lieux étant arrêté par les Présidents des ligues existantes et la Délégation d'Arrondissement le cas échéant. Information à relayer à l'instance supérieur au plus tard 48h avant la tenue.</p>
                             <p class="video"> <i class="pi pi-youtube"></i> voir la vidéo</p>
                         </div>
                         <img src="../../assets/img/program/talk.jpeg" alt="">
@@ -75,8 +75,8 @@
 
                     <div class="event">
                         <div class="left">
-                            <p class="header">Ce dimanche, ne vous laissez pas imposer les 5 ans qui viennent !</p>
-                            <p class="date">17 juin 2022</p>
+                            <p class="header">Assemblées Générales Électives </p>
+                            <p class="date">12 Novembre 2022</p>
                             <p class="text">Le 17 juin 2022, Jean-Luc Mélenchon était l’invité de l’émission « Questions de confiance » sur BFMTV et RMC. Apolline de Malherbe l’a tout d’abord questionné sur le déplacement d’Emmanuel</p>
                         </div>
                         <img src="../../assets/img/program/talk.jpeg" alt="">
