--- a/src/app/components/agenda/agenda.component.scss
+++ b/src/app/components/agenda/agenda.component.scss
@@ -78,6 +78,10 @@ $colorBlue: #15385c;
                                     color: black;
                                     margin-bottom: 10px;
                                     font-weight: 700;
+
+                                    span{
+                                        font-weight: 300;
+                                    }
                                 }
             
                                 .text{
