--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,9 +2,9 @@
     <div class="content my-container">
         <div class="top">
             <div class="left">
-                <a routerLink="">NOMDEDOMAINECHOISI.COM</a>
+                <a routerLink="">YVESTSALA2022.COM</a>
                 <p class="summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, numquam corrupti blanditiis incidunt illum velit. Nam ad repellat rem magnam, ab quibusdam voluptas porro voluptates deserunt. Tempore facilis obcaecati nisi?</p>
-                <p class="slogan">Ici apparaitra le slogan !</p>
+                <p class="slogan">DRAW A NEW VISION</p>
             </div>
             <div class="right">
                 <div class="social-medias">
@@ -14,21 +14,21 @@
                     <i class="pi pi-instagram"></i>
                 </div>
     
-                <button class="donate">
+                <button class="donate" routerLink="/faire-un-don">
                     Faire un don
                 </button>
     
-                <button class="share">
+                <button class="share" routerLink="/partager-la-campagne">
                     <i class="pi pi-share-alt"></i>
                     partager la campagne
                 </button>
     
                 <nav>
                     <ul>
-                        <li><a>Accueil</a></li>
-                        <li><a>Programme</a></li>
-                        <li><a>Agenda</a></li>
-                        <li><a>Nous contacter</a></li>
+                        <li><a routerLink="">Accueil</a></li>
+                        <li><a routerLink="/programme">Programme</a></li>
+                        <li><a routerLink="/agenda">Agenda</a></li>
+                        <li><a routerLink="/nous-contacter">Nous contacter</a></li>
                     </ul>
                 </nav>
             </div>
