--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
 
     <div class="content my-container">
-        <a routerLink="" class="logo">La Solution <span>Basket</span></a>
+        <a routerLink="" class="logo">Draw <span>A New Vision</span></a>
 
         <div class="right">
 
