--- a/src/app/components/home-program/home-program.component.html
+++ b/src/app/components/home-program/home-program.component.html
@@ -1,7 +1,7 @@
 <div class="program">
     <div class="texts">
         <div class="header">
-            <p>Le slogan apparaitra ici</p>
+            <p>Draw A New Vision</p>
             <p>UN PETIT TEXTE ICI QUI EN DIT LONG</p>
         </div>
         <div class="tabs">
@@ -25,7 +25,7 @@
             </div>
 
         </div>
-        <p class="call-to-donate">Soutenez le candidat <span>Obam Lefoumsy</span> en <span>faisant un don</span></p>
+        <p class="call-to-donate">Soutenez le candidat <span>Obam Lefoumsy</span> en <span routerLink="/faire-un-don">faisant un don</span></p>
     </div>
     <img src="../../assets/img/home/program/program.jpg" alt="">
 </div>
