--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,15 +1,14 @@
 <div class="home">
     <div class="hero">
         <div class="hero-content my-container">
-            
+            <img src="../../assets/img/home/image.png" alt="">
             <div class="texts">
-                <span>Soutenez</span>
+                <span>Soutenons</span>
                 <h1>Yves TSALA</h1>
                 <span>Pour une jeunesse dynamique, sportive</span>
                 <span>et qui vit de ses talents !</span>
-                <button>Voir le programme</button>
+                <button routerLink="/programme">Voir le programme</button>
             </div>
-            <img src="../../assets/img/home/image.png" alt="">
         </div>
     </div>
     <div class="content my-container">
