--- a/src/app/components/program-long/program-long.component.html
+++ b/src/app/components/program-long/program-long.component.html
@@ -1,1 +1,55 @@
-<p>program-long works!</p>
+<div class="program-long">
+
+    <div class="title">
+        <div class="top-content my-container">
+            <h1>PROGRAMME PAR THÉMATIQUE</h1>
+            <p>Pour financer les dépenses liées à l’organisation d’événements, à l’achat de matériel, au fonctionnement de ce site, etc, nous avons besoin du soutien financier de chacun(e) d’entre vous</p>
+        </div>
+    </div>
+
+    <div class="content my-container">
+            <div class="nav">
+                <ul>
+                    <ng-template ngFor let-menu [ngForOf]="menus"; let-i="index">
+                        <li>
+                            <button [ngClass]="menu.opened? 'active-button': ''" (click)="onActivateMenu(menu.index)">{{menu.label}}</button>
+                        </li>
+                    </ng-template>
+                </ul>
+        </div>
+
+        <div class="nav-content">
+            <div *ngIf="activedMenuIndex == 0">
+                <p>On affiche le contenu de la thématique ressources</p>
+            </div>
+            <div *ngIf="activedMenuIndex == 1">
+                <p>On affiche le contenu de la thématique Infrastructures</p>
+            </div>
+            <div *ngIf="activedMenuIndex == 2">
+                <p>On affiche le contenu de la thématique Commisions et Missions</p>
+            </div>
+            <div *ngIf="activedMenuIndex == 3">
+                <p>On affiche le contenu de la thématique Championnats</p>
+            </div>
+            <div *ngIf="activedMenuIndex == 4">
+                <p>On affiche le contenu de la thématique Marketing</p>
+            </div>
+            <div *ngIf="activedMenuIndex == 5">
+                <p>On affiche le contenu de la thématique Gouvernance</p>
+            </div>
+            <div *ngIf="activedMenuIndex == 6">
+                <p>On affiche le contenu de la thématique Formation</p>
+            </div>
+            <div *ngIf="activedMenuIndex == 7">
+                <p>On affiche le contenu de la thématique Direction Technique Nationale</p>
+            </div>
+            <div *ngIf="activedMenuIndex == 8">
+                <p>On affiche le contenu de la thématique Communication</p>
+            </div>
+            <div *ngIf="activedMenuIndex == 9">
+                <p>On affiche le contenu de la thématique Collaboration Internationale</p>
+            </div>
+        </div>
+    </div>
+
+</div>
