--- a/src/app/components/program/program.component.html
+++ b/src/app/components/program/program.component.html
@@ -54,7 +54,7 @@
                 <h3 class="colored">En soutenant
                     <span>Yves TSALA</span> ,</h3>
                 <p>vous pouvez porter ce programme au second tour et battre l'extrême droite dès le premier tour.</p>
-                <button> <i class="pi pi-share-alt"></i>Partagez la campagne</button>
+                <button routerLink="/partager-la-campagne"> <i class="pi pi-share-alt"></i>Partagez la campagne</button>
             </div>
         </div>
     </div>
