--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -17,6 +17,17 @@
         width: 100%;
         height: 80vh;
 
+        &::after{
+            position: absolute;
+            width: 100%;
+            height: 80vh;
+            content: "";
+            top: 0;
+            left: 0;
+            background: linear-gradient(90deg, #02002442 0%, #090979c4 35%, rgba(0, 212, 255, 0) 100%);
+            z-index: 0;
+        }
+
         .hero-content{
 
             position: relative;
@@ -28,8 +39,9 @@
             img{
                 position: absolute;
                 bottom: 0;
-                width: 55vh;
-                right: 10%;
+                width: 44vh;
+                left: 10%;
+                z-index: 1;
 
             }
 
@@ -37,7 +49,8 @@
                 display: flex;
                 flex-direction: column;
                 color: white;
-                margin: 40px 0 0 5%;
+                margin: 39px 0 0 50%;
+                z-index: 1;
 
                 span:first-child{
                     align-self: flex-start;
