--- a/src/app/components/program-short/program-short.component.html
+++ b/src/app/components/program-short/program-short.component.html
@@ -1,9 +1,9 @@
 <div class="program-short">
 
-    <div class="hero-page">
-        <div class="content my-container">
-            <img src="../../../assets/img/program/image_sin.png" alt="">
-            <h1>J'aide à obtenir plus de signatures​ !</h1>
+    <div class="title">
+        <div class="top-content my-container">
+            <h1>PROGRAMME EN VERSION COURTE</h1>
+            <p>Pour financer les dépenses liées à l’organisation d’événements, à l’achat de matériel, au fonctionnement de ce site, etc, nous avons besoin du soutien financier de chacun(e) d’entre vous</p>
         </div>
     </div>
 
