--- a/src/app/components/program-short/program-short.component.scss
+++ b/src/app/components/program-short/program-short.component.scss
@@ -7,34 +7,38 @@ $colorBlue: #15385c;
     align-items: center;
     min-height: 100vh;
 
-    .hero-page{
+    .title{
         width: 100%;
         height: 60vh;
         display: flex;
+        flex-direction: column;
         align-items: center;
+        justify-content: center;
         background: $colorBlue;
 
-        .content{
-            position: relative;
-            overflow: hidden;
-            align-items: flex-end;
-            justify-content: center;
-            width: 100%;
+        .top-content{
+
             display: flex;
+            flex-direction: column;
+            align-items: center;
             width: 100%;
             height: 100%;
-            
+            justify-content: center;
+
             h1{
-                color: white;
+                color: #ed6e34;
                 width: 460px;
-                margin-right: 100px;
+                text-align: center;
+                margin-top: 90px;
+                font-size: 2.5em;
+                margin-bottom: 30px;
             }
-    
-            img{
-                position: absolute;
-                bottom: -14px;
-                width: 370px;
-                left: 20%;
+
+            p{
+                max-width: 80%;
+                text-align: center;
+                color: white;
+                line-height: 28px;
             }
         }
     }
