--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <header>
 
     <div class="content my-container">
-        <a routerLink="" class="logo">Draw <span>A New Vision</span></a>
+        <a routerLink="" class="logo">Draw <span>a new vision</span></a>
 
-        <div class="right">
+        <div class="header-right">
 
             <nav>
                 <ul>
