--- a/src/app/components/home-program/home-program.component.html
+++ b/src/app/components/home-program/home-program.component.html
@@ -7,7 +7,7 @@
         <div class="tabs">
             <div class="tab" routerLink="/programme/version-courte">
                 <fa-icon [icon]="faClock"></fa-icon>
-                <div class="texts">
+                <div class="tab-texts">
                     <p class="top">Le programme en version courte</p>
                     <p class="bottom">Découvrez une version simple et alléger du programme</p>
                 </div>
@@ -17,7 +17,7 @@
 
             <div class="tab" routerLink="/programme/version-longue">
                 <fa-icon [icon]="faThLarge"></fa-icon>
-                <div class="texts">
+                <div class="tab-texts">
                     <p class="top">Le programme par thématique</p>
                     <p class="bottom">Découvrez le programme </p>
                 </div>
@@ -25,7 +25,7 @@
             </div>
 
         </div>
-        <p class="call-to-donate">Soutenez le candidat <span>Obam Lefoumsy</span> en <span routerLink="/faire-un-don">faisant un don</span></p>
+        <p class="call-to-donate">Soutenez le candidat Yves TSALA en <span routerLink="/faire-un-don">faisant un don</span></p>
     </div>
-    <img src="../../assets/img/home/program/program.jpg" alt="">
+    <img src="../../assets/img/home/program/program.png" alt="">
 </div>
