--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,6 +10,8 @@
                 <button routerLink="/programme">Voir le programme</button>
             </div>
         </div>
+
+        <div class="ball"></div>
     </div>
     <div class="content my-container">
         <app-home-about></app-home-about>
