--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,9 @@
+@font-face{
+    font-family: 'gistesy';
+    font-display: swap;
+    src: url('./assets/font/gystesy/Gistesy.ttf') format("truetype");
+}
+
 *{
     margin: 0;
     padding: 0;
