--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -77,7 +77,6 @@
     
                         &:hover{
                             transform: translateY(-7px);
-    
                         }
                     }
                 }
@@ -151,4 +150,106 @@
         }
     }
 
+}
+
+@media all and (max-width: 960px){
+
+    .footer{
+
+        .content{
+
+            .top{
+                flex-direction: column;
+
+                .left{
+                    width: 100%;
+                }
+
+                .right{
+                    align-items: flex-start;
+                    
+                    .social-medias{
+                        margin-top: 20px;
+
+                        i{
+                            margin-right: 7px;
+                            margin-left: 0;
+                        }
+                    }
+
+                    .donate{
+                        margin-top: 20px;
+                    }
+
+                    .share{
+                        margin-top: 20px;
+                    }
+
+                    nav{
+                        
+                        ul{
+
+                            flex-wrap: wrap;
+
+                            li{
+                                margin-top: 20px;
+                                margin-left: 0;
+                                margin-right: 20px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        
+    }
+}
+
+@media all and (max-width: 450px){
+
+    .footer{
+
+        .content{
+
+            .top{
+
+                .left{
+                    align-items: center;
+
+                    .summary{
+                        text-align: center;
+                    }
+                }
+
+                .right{
+
+                    align-items: center;
+                    
+                    .social-medias{
+
+                        margin-top: 20px;
+
+                        i{
+                            margin-right: 7px;
+                            margin-left: 0;
+                        }
+                    }
+
+                    nav{
+                        
+                        ul{
+                            
+                            justify-content: center;
+
+                            li{
+                                margin-top: 20px;
+                                margin-left: 0;
+                                margin-right: 20px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
