--- a/src/app/components/program-short/program-short.component.scss
+++ b/src/app/components/program-short/program-short.component.scss
@@ -1,3 +1,7 @@
+@import "~swiper/css";
+@import "~swiper/css/pagination";
+@import "~swiper/css/navigation";
+
 $colorBlue: #15385c;
 
 .program-short{
@@ -44,11 +48,113 @@ $colorBlue: #15385c;
     }
 
     .content{
-        padding-top: 5em;
+        padding-top: 5em; 
+        padding-bottom: 5em; 
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        justify-content: space-between;
         width: 100%;
         height: 100%;
+
+
+        .p-accordion .p-accordion-header:not(.p-disabled).p-highlight .p-accordion-header-link {
+            background: #f56f36;
+            border-color: #dee2e6;
+            color: #f8f9fa;
+            border-bottom-right-radius: 0;
+            border-bottom-left-radius: 0;
+        }
+
+        .p-accordion .p-accordion-header:not(.p-disabled) .p-accordion-header-link:focus {
+            outline: 0 none;
+            outline-offset: 0;
+            box-shadow: none;
+        }
+
+
+        .accordion-content{
+            display: flex;
+            justify-content: center;
+            padding: 20px;
+
+            .images{
+                width: 400px;
+                height: 300px;
+                margin-right: 30px;
+                
+                .swiper {
+                    width: 100%;
+                    height: 100%;
+                
+                    .swiper-slide {
+                        text-align: center;
+                        font-size: 18px;
+                        background: #fff;
+                      
+                        /* Center slide text vertically */
+                        display: -webkit-box;
+                        display: -ms-flexbox;
+                        display: -webkit-flex;
+                        display: flex;
+                        -webkit-box-pack: center;
+                        -ms-flex-pack: center;
+                        -webkit-justify-content: center;
+                        justify-content: center;
+                        -webkit-box-align: center;
+                        -ms-flex-align: center;
+                        -webkit-align-items: center;
+                        align-items: center;
+                      }
+        
+                      .swiper-slide img {
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                      }
+
+                      .swiper-pagination{
+                        height: 24px;
+                        bottom: 14px;
+                        padding: 0 13px;
+                        width: fit-content;
+                        background: #00000069;
+                        border-radius: 100px;
+                        left: 50%;
+                        transform: translateX(-50%);
+            
+                        .swiper-pagination-bullet{
+                            width: 15px;
+                            height: 15px;
+                            background-color: white;
+                            opacity: 0.65;
+                        }
+        
+                        .swiper-pagination-bullet:hover{
+                            opacity: 1;
+                        }
+            
+                        .swiper-pagination-bullet-active{
+                            background-color: #15385d;
+                            opacity: 1;
+                            margin-top: 4px;
+                        }
+                    }
+                }
+            }
+
+            .texts{
+                display: flex;
+                flex-direction: column;
+
+                p{
+                    text-align: justify;
+                    margin-bottom: 7px;
+                }
+            }
+
+            
+        }
+
+        
     }
 }
